--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ html {
 
 body {
     margin: 0;
+    margin-block-start: 5rem;
     margin-block-end: 5.1rem;
     letter-spacing: 0.1px;
 }
@@ -104,6 +105,7 @@ h1, h2, h3 {
     gap: var(--gap);
     align-content: center;
 }
+
 .card {
     --border-radius: 4px;
     background-color: #fff;
